--- a/main.html
+++ b/main.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<h1>Time, Space, and Complexity</h1>
+	
+	<p>Time complexity is a type of computational complexity that describes the time required to execute an algorithm. The time complexity of an algorithm is the amount of time it takes for each statement to complete. As a result, it is highly efficient depending on the size of the processed data.</p>
+	
+	<p>In <b>Space Complexity</b> equation, 'n' denotes the upper bound value. If a function is O(n), it is also O(n2) and O(n3).</p>
+
 
 </body>
 
